Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.12.11, 5.15.2
-
None
-
macOS: Catalina 10.15.7
-
-
422880c9d (dev)
Description
Following example doesn't print "WORK" when cyrillic keyboard layout is used
#include <QApplication> #include <QAction> #include <QDebug> int main(int argc, char *argv[]) { QApplication a(argc, argv); QWidget w; QAction* langAction = new QAction(&w); langAction->setShortcut(QKeySequence(Qt::CTRL + Qt::Key_N)); w.addAction(langAction); QObject::connect(langAction, &QAction::triggered, [](){ qDebug() << "WORK"; }); w.show(); return a.exec(); }
Steps to reproduce:
1) Ensure that "US" and "Russian - PC" is part of OS X's "Input Sources" by going to "System Preferences" and adding them under the "Input Sources" tab in the "Keyboard" preference. Also ensure that "Show input menu in menu bar" is enabled so you can quickly switch between the input sources.
2) Compile and run the code above
3) Switch to "Russian - PC" layout
4) Press cmd+n
Actual: nothing happens
Expected: message "WORK" in the program output
This bug is basically a duplicate of https://bugreports.qt.io/browse/QTBUG-50865 which is also can be reproduced despite being closed
This bug is basically a duplicate of https://bugreports.qt.io/browse/QTBUG-52591 which is also can be reproduced despite being closed
Attachments
Issue Links
- relates to
-
QTBUG-112736 Research how shortcuts relate to keyboard layouts and localizations
-
- Open
-
For Gerrit Dashboard: QTBUG-96371 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
509848,5 | macOS: Enable Latin key combinations when Command (⌘) modifier is pressed | dev | qt/qtbase | Status: MERGED | +2 | 0 |